# Ray-Tracer-CPP

./: CMakeLists.txt  README.md  environment.yml
images/: output.ppm
src/: main.cpp
